# OtimizadorDeConsultas

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/app/: PlanNodeView.h  QueryProcessingResult.h  QueryProcessorService.cpp  QueryProcessorService.h
src/core/execution/: ExecutionNode.h  ExecutionPlan.cpp  ExecutionPlan.h  FilterNode.cpp  FilterNode.h  JoinNode.cpp  JoinNode.h  ProjectionNode.cpp  ProjectionNode.h  TableScanNode.h
src/core/lexer/: Lexer.cpp  Lexer.h  Token.h  TokenType.h
src/core/metadata/: MetadataCatalog.cpp
src/core/optimizer/: Optimizer.cpp  Optimizer.h
src/core/parser/: Parser.cpp
src/core/query/: Query.cpp
src/core/semantic/: SemanticValidator.cpp  SemanticValidator.h
src/execution/: ExecutionNode.cpp  ExecutionPlan.cpp  ExecutionPlan.h  ExecutionPlanBuilder.cpp  ExecutionPlanBuilder.h  FilterNode.cpp  FilterNode.h  JoinNode.cpp  JoinNode.h  ProjectionNode.cpp  ProjectionNode.h  SubplanInfo.h  TableScanNode.cpp
src/lexer/: Lexer.cpp  Lexer.h  TokenType.h
src/metadata/: MetadataCatalog.cpp  MetadataCatalog.h
src/optimizer/: Optimizer.cpp  Optimizer.h
src/parser/: Parser.cpp  Parser.h
src/query/: Condition.h  JoinClause.h  Query.h
src/semantic/: SemanticValidator.cpp  SemanticValidator.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h  MainWindow.cpp  MainWindow.h
src/ui/panels/: ExecutionOrderPanel.cpp  ExecutionOrderPanel.h  PlanGraphPanel.cpp  PlanGraphPanel.h  PlanTreePanel.cpp  PlanTreePanel.h  QueryInputPanel.cpp  QueryInputPanel.h  RelationalAlgebraPanel.cpp  RelationalAlgebraPanel.h
src/utils/: StringUtils.cpp  StringUtils.h
